@@ -35,6 +35,18 @@
               type: integer
               description: >
                 All TCP listening ports
+            - name: established
+              type: integer
+              description: >
+                Number of established TCP connections
+            - name: close_wait
+              type: integer
+              description: >
+                Number of TCP connections in _close_wait_ state
+            - name: time_wait
+              type: integer
+              description: >
+                Number of TCP connections in _time_wait_ state
     - name: udp
       type: group
       description: >
@@ -49,5 +61,6 @@
               type: integer
               description: >
                 All open TCP connections
+
 
 
