@@ -136,6 +136,7 @@ https://github.com/elastic/beats/compare/v6.5.0...6.x[Check the HEAD diff]
 - Add freebsd support for the uptime metricset. {pull}9413[9413]
 - Add `host.os.name` field to add_host_metadata processor. {issue}8948[8948] {pull}9405[9405]
 - Add field `event.dataset` which is `{module}.{metricset).
+- Add more TCP statuses to `socket_summary` metricset. {pull}9430[9430]
 
 *Packetbeat*
 
